[tool.poetry]
name = "kaggle-tutorial"
version = "0.5.1"
description = ""
authors = ["Jan Karas <mygnirut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.17"
ruff = "^0.8.1"
pytest = "^8.3.4"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
