[tool.poetry]
name = "kaggle-tutorial"
version = "0.6.0"
description = ""
authors = ["Jan Karas <mygnirut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.17"
ruff = "^0.8.1"
pytest = "^8.3.4"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
